--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,6 +5,7 @@ volumes:
 
 services:
   app:
+    container_name: app
     build: .
     restart: always
     ports:
@@ -13,6 +14,7 @@ services:
       - '../patterns:/var/www/html'
 
   web:
+    container_name: web
     image: nginx
     restart: always
     ports:
@@ -21,8 +23,11 @@ services:
     volumes:
       - './configs/nginx.conf:/etc/nginx/conf.d/default.conf'
       - '../patterns/:/var/www/html'
+    extra_hosts:
+      - patterns.hs:127.0.0.1
 
   db:
+    container_name: db
     image: mysql:5.7
     restart: always
     environment:
